[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "sharedstate"
version = "0.1.0"
requires-python = ">=3.7"
dependencies = [
    "mysql-connector-python",
    "websockets",
    "aiomysql",
    "pytest",
    "pytest-asyncio",
    "aiosqlite"
]

[project.scripts]
sharedstate = "src.server.ss_server:main"

