[tool.poetry]
name = "sharedstate"
version = "0.1.0"
description = "Python server and JavaScript client for real-time data sharing."
authors = ["Ingar M. Arntzen <ingar.arntzen@gmail.com>"]
license = "BSD-2-Clause"
repository = "https://github.com/ingararntzen/shared-state"
documentation = "https://github.com/ingararntzen/shared-state#readme"
keywords = ["python", "web", "real-time", "data-sharing", "websocket", "mysql"]


[tool.poetry.dependencies]
python = ">=3.7"
mysql-connector-python = "*"
websockets = "*"
aiomysql = "*"
aiosqlite = "*"
cryptography = "*"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
black = "*"
pytest = "*"
pytest-asyncio = "*"

[tool.poetry.scripts]
sharedstate-server = "sharedstate.ss_server:start"

